feat: Add Anki flashcard feature and upgrade to Next.js 16
Major Features:
- ✨ Complete Anki flashcard system for language learning
  - CRUD operations for decks and cards
  - Audio generation for front/back text (TTS)
  - Image generation support
  - CEFR level classification
  - Dutch word frequency analysis
  - Card difficulty tracking (easy/medium/hard)

Backend Changes:
- Add AnkiService with full deck/card management
- Add AudioService for TTS generation (piper)
- Add ImageService for card images
- Add CEFRService for language level classification
- Add anki_commands for CLI operations
- Fix Pydantic v2 validation (Field(default_factory=list))
- Add /api/anki/* routes with full CRUD endpoints

Frontend Changes:
- Upgrade Next.js 15.4.7 → 16.0.8
- Upgrade React 19.1.0 → 19.2.1
- Add complete Anki UI (/anki route)
  - Deck list with cards grid
  - Deck detail page with card management
  - Create/edit/delete decks and cards
  - Audio playback for TTS
  - Responsive card grid layout
- Add Skeleton component for loading states
- Add Anki to sidebar navigation

Development Infrastructure:
- Add DEVELOPMENT.md with hot reload documentation
- Add NEXTJS_16_UPGRADE.md migration guide
- Document Docker + Windows hot reload limitations
- Add docker-compose.dev.yml with polling config
- Add Dockerfile.dev for development builds
- Configure supervisord with proper PORT/HOSTNAME env vars
- Enable CHOKIDAR_USEPOLLING for Docker file watching

Deployment:
- Add ORANGEPI_DEPLOYMENT.md for production deployment
- Add docker-compose.orangepi.yml configuration
- Add Caddyfile for reverse proxy with HTTPS
- Add open-notebook.yml and nextcloud.yml compose files

Testing:
- Add comprehensive test_anki.py test suite
- Add ANKI_TEST_COVERAGE.md documentation

Dependencies:
- Add espeak-ng for TTS audio generation
- Update pyproject.toml with new service dependencies
- Update frontend package.json for Next.js 16

Configuration:
- Port 8502 properly configured via environment variables


--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,3 +1,24 @@
+# Development Environment Configuration
+# 
+# IMPORTANT: Hot Reload Limitations on Windows/macOS
+# =====================================================
+# Due to Docker volume mount limitations on Windows and macOS, file change events
+# from the host filesystem may not reliably propagate to the Linux container.
+# This affects Next.js hot reload (Fast Refresh) functionality.
+#
+# WORKAROUND:
+# - File changes ARE saved and synced to the container
+# - Backend API hot reload works (Uvicorn --reload)
+# - Frontend requires MANUAL BROWSER REFRESH (Ctrl+R / Cmd+R) to see changes
+# - Changes are immediate, just not automatically reflected in browser
+#
+# For full hot reload support, consider:
+# 1. Run frontend natively: cd frontend && npm run dev (port 3000)
+# 2. Use WSL2 and develop inside WSL2 filesystem (not /mnt/c/)
+# 3. Accept manual refresh workflow (recommended for simple changes)
+#
+# See DEVELOPMENT.md for detailed setup instructions.
+
 services:
   surrealdb:
     image: surrealdb/surrealdb:v2
@@ -9,10 +30,44 @@ services:
     pull_policy: always
     user: root
     restart: always
+  
+  ollama:
+    image: ollama/ollama:latest
+    ports:
+      - "127.0.0.1:11434:11434"
+    volumes:
+      - ollama_data:/root/.ollama
+    restart: unless-stopped
+  
+  whisper:
+    image: onerahmet/openai-whisper-asr-webservice:latest
+    container_name: whisper
+    ports:
+      - "127.0.0.1:9000:9000"
+    environment:
+      - ASR_MODEL=base
+      - ASR_ENGINE=openai_whisper
+    volumes:
+      - whisper-models:/root/.cache/whisper
+    restart: unless-stopped
+  
+  piper:
+    image: lscr.io/linuxserver/piper:latest
+    container_name: piper
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Etc/UTC
+    volumes:
+      - piper-data:/config
+    ports:
+      - "127.0.0.1:10200:10200"
+    restart: unless-stopped
+  
   open_notebook:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
       - "8502:8502"
       - "5055:5055"
@@ -20,7 +75,27 @@ services:
       - ./docker.env
     depends_on:
       - surrealdb
+      - ollama
+      - whisper
+      - piper
     volumes:
       - ./notebook_data:/app/data
+      - .:/app  # Mount source code for live development
+      - frontend_node_modules:/app/frontend/node_modules  # Prevent overwriting node_modules
+      # Exclude Python cache for better performance
+      - /app/.venv
+      - /app/open_notebook.egg-info
+    environment:
+      - SURREAL_URL=ws://surrealdb:8000
+      - OLLAMA_BASE_URL=http://ollama:11434
+      - WHISPER_API_URL=http://whisper:9000
+      - PIPER_API_URL=http://piper:10200
+      - WATCHFILES_FORCE_POLLING=false  # Use native file watching (faster on most systems)
     restart: always
-    
+    command: ["/usr/bin/supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
+
+volumes:
+  ollama_data:
+  whisper-models:
+  piper-data:
+  frontend_node_modules:
