--- a/Dockerfile.single
+++ b/Dockerfile.single
@@ -46,10 +46,12 @@ FROM python:3.12-slim-bookworm AS runtime
 
 # Install runtime system dependencies including curl for SurrealDB installation
 # Add Node.js 20.x LTS for running frontend
+# Add espeak-ng for Anki phonetic analysis
 RUN apt-get update && apt-get upgrade -y && apt-get install -y \
     ffmpeg \
     supervisor \
     curl \
+    espeak-ng \
     && curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
     && apt-get install -y nodejs \
     && rm -rf /var/lib/apt/lists/*
