feat: Add supervisorctl support and update package-lock for Next.js 16
- Add supervisorctl section to supervisord.conf for interactive process control
- Add unix_http_server and rpcinterface for supervisorctl functionality
- Update package-lock.json to lock Next.js 16.0.8 dependencies
- Update tsconfig for React 19 compatibility

Enables debugging commands like:
- supervisorctl status
- supervisorctl restart frontend
- supervisorctl stop/start worker

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,6 +4,15 @@ logfile=/dev/stdout
 logfile_maxbytes=0
 pidfile=/tmp/supervisord.pid
 
+[supervisorctl]
+serverurl=unix:///tmp/supervisor.sock
+
+[unix_http_server]
+file=/tmp/supervisor.sock
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
 [program:api]
 command=uv run uvicorn api.main:app --host 0.0.0.0 --port 5055 --reload --reload-dir /app/api --reload-dir /app/open_notebook
 stdout_logfile=/dev/stdout
