feat: Auto-download Ollama models and improve error messages
**Ollama Auto-Setup:**
- Add ollama-setup service to docker-compose files
- Automatically pulls mxbai-embed-large and qwen2.5:3b on first startup
- Skips if models already exist (fast restarts)
- Works across dev, prod, and Orange Pi deployments

**Model Validation:**
- Add /models/ollama/available endpoint to list Ollama models
- Add /models/validate endpoint to check configured models exist
- Show detailed validation warnings in Models settings page
- List missing models with installation instructions

**Better Error Messages:**
- Detect missing model errors in chat hooks
- Show user-friendly messages: 'Model not available: qwen2.5:3b'
- Provide context: 'The AI model is being downloaded. Please wait...'
- Separate handling for embedding vs chat model errors

Fixes the confusion when models are missing - users now know exactly
what's happening and how long to wait.

--- a/docker-compose.orangepi.yml
+++ b/docker-compose.orangepi.yml
@@ -45,8 +45,42 @@ services:
       - "11434:11434"  # Accessible from LAN
     volumes:
       - ollama_data:/root/.ollama
+    healthcheck:
+      test: ["CMD", "ollama", "list"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     # Remove GPU support (Orange Pi doesn't have NVIDIA GPU)
     restart: unless-stopped
+  
+  ollama-setup:
+    image: ollama/ollama:latest
+    depends_on:
+      ollama:
+        condition: service_healthy
+    volumes:
+      - ollama_data:/root/.ollama
+    environment:
+      - OLLAMA_HOST=http://ollama:11434
+    entrypoint: ["/bin/sh", "-c"]
+    command:
+      - |
+        echo "Checking for required Ollama models..."
+        
+        # Essential models for Open Notebook (smaller models for ARM)
+        MODELS="mxbai-embed-large qwen2.5:3b"
+        
+        for model in $$MODELS; do
+          if ! ollama list | grep -q "$$model"; then
+            echo "Pulling $$model..."
+            ollama pull $$model
+          else
+            echo "$$model already exists, skipping..."
+          fi
+        done
+        
+        echo "Model setup complete!"
+    restart: "no"
 
   whisper:
     image: onerahmet/openai-whisper-asr-webservice:latest
