chore: disable legacy embed_chunk command and add Anki integration to-do list
- Disable embed_chunk_command to prevent legacy chunk job execution
- Update vectorize() docstring to reflect batch-only flow (no per-chunk jobs)
- Add ANKI_TODO.md with comprehensive checklist for:
  - Card/deck creation & testing (all instantiation paths)
  - Template development (anki_multicard insights, card templates)
  - Media integration (image search/creation, TTS for pronunciation)
  - APKG export/download functionality
  - Documentation and integration testing

Related to embedding refactor and Anki flashcard feature completion.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ duckdns.env
 notebook_data/
 notebook_data_backup*/
 letsencrypt/
+HARDWARE_RECOMMENDATIONS.md
 # Python-specific
 *.py[cod]
 __pycache__/
