--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,8 +4,17 @@ logfile=/dev/stdout
 logfile_maxbytes=0
 pidfile=/tmp/supervisord.pid
 
+[supervisorctl]
+serverurl=unix:///tmp/supervisor.sock
+
+[unix_http_server]
+file=/tmp/supervisor.sock
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
 [program:api]
-command=uv run uvicorn api.main:app --host 0.0.0.0 --port 5055
+command=uv run uvicorn api.main:app --host 0.0.0.0 --port 5055 --reload --reload-dir /app/api --reload-dir /app/open_notebook
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
@@ -26,9 +35,9 @@ autostart=true
 startsecs=3
 
 [program:frontend]
-command=bash -c "sleep 5 && npm run start"
+command=bash -c "sleep 5 && npm run dev"
 directory=/app/frontend
-environment=NODE_ENV="production",PORT="8502"
+environment=NODE_ENV="development",PORT="8502",HOSTNAME="0.0.0.0",CHOKIDAR_USEPOLLING="true",CHOKIDAR_INTERVAL="100",WATCHPACK_POLLING="true"
 passenv=API_URL,NEXT_PUBLIC_API_URL,INTERNAL_API_URL
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
