--- a/supervisord.conf
+++ b/supervisord.conf
@@ -35,9 +35,9 @@ autostart=true
 startsecs=3
 
 [program:frontend]
-command=bash -c "sleep 5 && npm run dev"
+command=/app/start-frontend.sh
 directory=/app/frontend
-environment=NODE_ENV="development",PORT="8502",HOSTNAME="0.0.0.0",CHOKIDAR_USEPOLLING="true",CHOKIDAR_INTERVAL="100",WATCHPACK_POLLING="true"
+environment=NODE_ENV="production",PORT="8502",HOSTNAME="0.0.0.0",CHOKIDAR_USEPOLLING="true",CHOKIDAR_INTERVAL="100",WATCHPACK_POLLING="true"
 passenv=API_URL,NEXT_PUBLIC_API_URL,INTERNAL_API_URL
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
